// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Segmented render empty segmented 1`] = `
<div
  class="ant-segmented"
/>
`;

exports[`Segmented render label with ReactNode 1`] = `
<div
  class="ant-segmented"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Daily
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      <div
        id="weekly"
      >
        Weekly
      </div>
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      <h2>
        Monthly
      </h2>
    </div>
  </label>
</div>
`;

exports[`Segmented render segmented ok 1`] = `
<div
  class="ant-segmented"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Daily
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Weekly
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Monthly
    </div>
  </label>
</div>
`;

exports[`Segmented render segmented with \`block\` 1`] = `
<div
  class="ant-segmented ant-segmented-block"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Daily
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Weekly
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Monthly
    </div>
  </label>
</div>
`;

exports[`Segmented render segmented with \`size#large\` 1`] = `
<div
  class="ant-segmented ant-segmented-lg"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Daily
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Weekly
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Monthly
    </div>
  </label>
</div>
`;

exports[`Segmented render segmented with \`size#small\` 1`] = `
<div
  class="ant-segmented ant-segmented-sm"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Daily
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Weekly
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Monthly
    </div>
  </label>
</div>
`;

exports[`Segmented render segmented with mixed options 1`] = `
<div
  class="ant-segmented"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Daily
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Weekly
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Monthly
    </div>
  </label>
</div>
`;

exports[`Segmented render segmented with numeric options 1`] = `
<div
  class="ant-segmented"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      1
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      2
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      3
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      4
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      5
    </div>
  </label>
</div>
`;

exports[`Segmented render segmented with options null/undefined 1`] = `
<div
  class="ant-segmented ant-segmented-disabled"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    />
  </label>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    />
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    />
  </label>
</div>
`;

exports[`Segmented render segmented with options: disabled 1`] = `
<div
  class="ant-segmented"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Daily
    </div>
  </label>
  <label
    class="ant-segmented-item ant-segmented-item-disabled"
  >
    <input
      class="ant-segmented-item-input"
      disabled=""
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Weekly
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Monthly
    </div>
  </label>
</div>
`;

exports[`Segmented render segmented with string options 1`] = `
<div
  class="ant-segmented"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Daily
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Weekly
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Monthly
    </div>
  </label>
</div>
`;

exports[`Segmented render segmented with thumb 1`] = `
<div
  class="ant-segmented"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Map
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Transit
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Satellite
    </div>
  </label>
</div>
`;

exports[`Segmented render segmented: disabled 1`] = `
<div
  class="ant-segmented ant-segmented-disabled"
>
  <label
    class="ant-segmented-item ant-segmented-item-selected"
  >
    <input
      checked=""
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Daily
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Weekly
    </div>
  </label>
  <label
    class="ant-segmented-item"
  >
    <input
      class="ant-segmented-item-input"
      type="radio"
    />
    <div
      class="ant-segmented-item-label"
    >
      Monthly
    </div>
  </label>
</div>
`;

exports[`Segmented rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-segmented ant-segmented-rtl"
/>
`;
